# anomaly-detector

./: .coverage  PROGRESS.md  README.md  README_TESTS.md  STATUS.md  checklist.md  fix_tests.py  noxfile.py  pyproject.toml  seq2seqchecklist.md  train.py
anomalydetector/: __init__.py  cli.py  config.py  core.py
config/: README.md  dev.yml  prod.yml  train_config.yaml
data/: generate_logs.py
dev-tools/: pre-commit.sh
docs/: AWS_SETUP.md  DATA_RETENTION_POLICY.md
infra/: app.py  security_detector_stack.py
notebooks/: 01-Entity-Labeling.ipynb  02-Anomaly-Profiling.ipynb
scripts/: Dockerfile  README-inference.md  README.md  deploy_detector.py  detector_inference.py  package_model_artifacts.py  s3_adapter.py  scan_secrets.py
src/: deployer_guard.py
tests/: conftest.py  test_audit_table_cdk.py  test_budget_guard.py  test_cdk_infrastructure.py  test_cdk_metrics.py  test_cdk_overrides.py  test_cdk_template.py  test_cli.py  test_config.py  test_config_loader.py  test_core.py  test_deploy_script.py  test_deployer_guard.py  test_detector_inference.py  test_enrichment.py  test_enrichment_ext.py  test_entities.py  test_entities_ext.py  test_generate_logs.py  test_inference_smoke.py  test_infra_private_and_audit.py  test_ingestion.py  test_ingestion_ext.py  test_kms_enforcement.py  test_kms_resolution.py  test_kms_resolution_additional.py  test_kms_resolution_more.py  test_package_artifacts.py  test_package_dryrun.py  test_package_script.py  test_package_transfer_config.py  test_reconciler.py  test_reconciler_cdk.py  test_reconciler_iam_and_schedule.py  (+10 more)
(+19 files in other folders)
